--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ button {
   padding: 0.5rem 1rem;
   background-color: transparent;
   border: 2px solid var(--color-ligth);
-  color: var(--color-light);
+  color: var(--color-ligth);
   cursor: pointer;
 }
 
@@ -51,7 +51,7 @@ button {
   font-size: 2rem;
   font-weight: 500;
   text-decoration: none;
-  color: var(--color-light);
+  color: var(--color-ligth);
 }
 
 /* info */
@@ -74,7 +74,7 @@ button {
 
 .menu__item a {
   display: inline-block;
-  color: var(--color-light);
+  color: var(--color-ligth);
 }
 
 /* table */
@@ -95,4 +95,25 @@ thead tr {
 th,
 td {
   padding: 12px 15px;
+}
+
+th {
+  font-weight: 800;
+  font-size: 1.4rem;
+  font-style: italic;
+}
+
+/* form */
+
+.form {
+  display: flex;
+  gap: 1rem;
+}
+
+.input {
+  display: inline-block;
+  padding: 0.5rem;
+  background-color: var(--color-dark);
+  color: var(--color-ligth);
+  width: 15rem;
 }
